V1.2 partially merge TW24